# nbdl

./: CMakeLists.txt
example/foo/: CMakeLists.txt  README.md  bak.main.cpp  fold_left.hpp  main.cpp
example/foo/include/foo/: bar.hpp  fold_left.hpp  integer_sequence.hpp  print.hpp
example/foo/include/foo/concept/: Printable.hpp
include/nbdl/: catch.hpp  pipe.hpp
include/nbdl/util/: base64_decode.hpp
test/nbdl/core/: pipe.cpp
test/nbdl/util/: base64.cpp
